--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,7 @@
   <body>
     <div class="main-content">
      {{>header}}
+     <p>This site was created by Daksh Jain.It uses the mapbox.com and weatherstack.com</p>
     <img class="portrait" src="img/me2.png" />
     </div>
     
